--- a/WebAppBlog/appsettings.json
+++ b/WebAppBlog/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppBlogContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppBlogContext-29ab64fb-8320-4b47-9eeb-a545721df1c4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebAppBlogContext": "secret"
   }
 }
