feat: Add Model

--- a/WebAppBlog/appsettings.json
+++ b/WebAppBlog/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppBlogContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppBlogContext-2753fea1-1952-4527-a400-09b2deb4fbd2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
